--- a/config_file.json
+++ b/config_file.json
@@ -4,7 +4,7 @@
 	"samplerate": 16000,
 	"chunkSecs": 2,
 	"soundDuration": 4,
-	"outPath": "DripFiles",
+	"outPath": "PopFiles",
 	"recordFormat": "sonyGan",
 	"paramRange": "Natural",
 	"params":
