tweaked dsgenerator for writing reading single and glummed tfrecords of arbitrary size

--- a/config_file.json
+++ b/config_file.json
@@ -4,7 +4,9 @@
 	"samplerate": 16000,
 	"chunkSecs": 2,
 	"soundDuration": 4,
-	"recordFormat": "params",
+      "recordFormat": "tfrecords",
+      "tftype": "shards",
+      "shard_size": 2,
 	"params":
 	[
 		{
